T02: build recipe and backend verification for the visual oracle
Plain javac builds each rendering backend in seconds: native from the GTK
Linux x86_64 fragment source folders, skia-canvas adds the org.eclipse.swt.skia
fragment with checksum-pinned skija 0.143.17 jars cached outside the worktree,
skija-proto compiles the prototype-skija fork against its own committed
0.116.3 jars. Non-Java resources are copied per source folder so theming CSS
and the ServiceLoader canvas factory registration resolve at runtime.
verify-backend.sh runs a probe under Xvfb and asserts genuine activation per
backend, rejecting silent fallback to native. ADR-002 records the decisions.